[project]
name = "prompt-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "huggingface-hub>=1.1.4",
    "ipdb>=0.13.13",
    "llama-cpp-python>=0.3.16",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
]
